# jira-mcp-server

./: .gitignore  README.md  config.py  main.py  pyproject.toml
