[project]
name = "jira-mcp-server"
version = "0.1.0"
description = ""
authors = [
    {name = "Danila Balabaev",email = "shattenjagger@yandex.ru"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jira (>=3.8.0,<4.0.0)",
    "mcp[cli] (>=1.12.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
